--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 spring.application.name=MySpringBootApp
 #port \uBC88\uD638 \uBCC0\uACBD
-server.port=8080
+#server.port=8080
+
+# \uC0AC\uC6A9\uC790\uAC00 \uC815\uC758\uD55C \uD658\uACBD\uBCC0\uC218
+myboot.name=Spring
+myboot.age=${random.int(1,100)}
+myboot.fullName=${myboot.name} Boot
+
+#\uD604\uC7AC \uD65C\uC131\uD654\uB41C \uD658\uACBD\uC744 \uB098\uD0C0\uB0B4\uB294 \uBB38\uC790\uC5F4\uC124\uC815
+spring.profiles.active=test
+
+#log file
+logging.file.path=logs
