--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ myboot.age=${random.int(1,100)}
 myboot.fullName=${myboot.name} Boot
 
 #\uD604\uC7AC \uD65C\uC131\uD654\uB41C \uD658\uACBD\uC744 \uB098\uD0C0\uB0B4\uB294 \uBB38\uC790\uC5F4\uC124\uC815
-spring.profiles.active=test
+spring.profiles.active=prod
 
 #log file
 logging.file.path=logs
