--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ spring.application.name=MySpringBootApp
 #server.port=8080
 
 # \uC0AC\uC6A9\uC790\uAC00 \uC815\uC758\uD55C \uD658\uACBD\uBCC0\uC218
-myboot.name=Spring
 myboot.age=${random.int(1,100)}
 myboot.fullName=${myboot.name} Boot
 
@@ -12,3 +11,8 @@ spring.profiles.active=prod
 
 #log file
 logging.file.path=logs
+
+#actuator
+management.endpoints.web.exposure.include=*
+
+spring.boot.admin.client.url=http://localhost:8090
